# workflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/commands/: autopilot.md  debug.md  implement.md  pr.md  research.md  review.md
.github/workflows/: ci.yml  deploy-docs.yml  release-binaries.yml
docs/: notify.md  plan-mcp.md  plan.md
scripts/ralph/: prd.json  progress.txt
skills/workflow-manager/: SKILL.md
skills/workflow-manager/references/: api_reference.md
src/: error.rs  main.rs
src/cli/: ai_update.rs  args.rs  compare.rs  export.rs  import.rs  list.rs  logs.rs  mcp.rs  memory.rs  mod.rs  run.rs  schedule.rs  secrets.rs  serve.rs  snapshot.rs  status.rs  sync.rs  templates.rs  trash.rs  validate.rs
src/core/: ai.rs  catalog.rs  compare.rs  config.rs  db.rs  detect.rs  discovery.rs  executor.rs  foreach.rs  history.rs  hooks.rs  logger.rs  mcp.rs  memory.rs  mod.rs  models.rs  notify.rs  notify_dispatch.rs  parser.rs  safety.rs  secret_env.rs  secrets.rs  sync.rs  template.rs  wizard.rs
src/core/notify/: discord.rs  email.rs  error.rs  gotify.rs  mattermost.rs  message.rs  mod.rs  msteams.rs  ntfy.rs  rate_limit.rs  resolve.rs  retry.rs  slack.rs  telegram.rs  webhook.rs
src/tui/: actions.rs  app.rs  event.rs  mod.rs  ui.rs
src/tui/actions/: editing.rs  execution.rs  git_sync.rs  mod.rs  normal.rs  search.rs  streaming.rs  wizard.rs
src/tui/ui/: details.rs  header.rs  helpers.rs  mod.rs  modals.rs  sidebar.rs  task_list.rs  wizard.rs
src/tui/widgets/: mod.rs
templates/: history.db
templates/docker/: cleanup.yaml  compose-status.yaml  container-status.yaml  image-update.yaml  logs-tail.yaml  network-inspect.yaml  resource-limits.yaml  restart-unhealthy.yaml  security-scan.yaml  volume-backup.yaml
templates/kubectl/: cluster-health.yaml  deployment-status.yaml  failed-pods.yaml  namespace-audit.yaml  pod-status.yaml  pv-storage.yaml  rbac-review.yaml  resource-usage.yaml  secret-configmap-audit.yaml  service-endpoints.yaml
templates/mcp/: db-backup.yaml  filesystem-ops.yaml  github-release.yaml
templates/monitoring/: website-content-check.yaml
templates/patching/: changelog-review.yaml  held-packages.yaml  kernel-update.yaml  patch-audit.yaml  patch-report.yaml  patch-verify.yaml  reboot-check.yaml  rollback.yaml  security-patches.yaml  unattended-setup.yaml
templates/security/: trivy-cve-check.yaml
templates/sysadmin/: backup-verify.yaml  cpu-load.yaml  cron-audit.yaml  disk-usage.yaml  failed-services.yaml  firewall-review.yaml  log-cleanup.yaml  memory-check.yaml  ntp-sync-check.yaml  port-scan.yaml  service-status.yaml  smart-disk-health.yaml  ssh-key-audit.yaml  ssl-cert-expiry.yaml  system-update.yaml  user-audit.yaml
templates/tools/: claude-update.yaml  codex-update.yaml  git-sync-pull.yaml  git-sync.yaml
tests/: cli_tests.rs  mcp_tests.rs
tests/fixtures/: echo_mcp_server.sh  history.db
tmp/: demo.exp  demo.sh  workflow_2026-03-13.cast  workflow_tui_demo.cast
website/: contributing.md  index.md  package-lock.json  package.json
website/.vitepress/: config.mts
website/features/: expressions.md  mcp.md  memory.md  notifications.md  secrets.md  sync-and-snapshots.md  webhooks.md
website/guide/: ai-integration.md  configuration.md  installation.md  introduction.md  quick-start.md  tui.md  workflows.md
website/reference/: cli.md  templates.md  yaml-schema.md
website/scripts/: generate-template-catalog.sh
(+5 files in other folders)
