[package]
name = "dzworkflows"
version = "0.1.0"
edition = "2021"
description = "A lightweight, file-based workflow orchestrator with TUI and CLI"
license = "MIT"

[[bin]]
name = "dzworkflows"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
