[package]
name = "workflow"
version = "0.3.2"
edition = "2021"
description = "A file-based workflow orchestrator with TUI and CLI, designed for humans and AI agents alike"
license = "MIT"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
similar = "2"
regex = "1"
is-terminal = "0.4"
wait-timeout = "0.2"
hostname = "0.4"
libc = "0.2"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
