[package]
name = "workflow"
version = "0.4.1"
edition = "2021"
description = "A file-based workflow orchestrator with TUI and CLI, designed for humans and AI agents alike"
license = "MIT"

[[bin]]
name = "workflow"
path = "src/main.rs"

[features]
default = ["slack", "discord", "webhook", "ntfy", "telegram", "email", "mattermost"]
slack = ["ureq"]
discord = ["ureq"]
webhook = ["ureq"]
ntfy = ["ureq"]
telegram = ["ureq"]
email = ["lettre"]
msteams = ["ureq"]
gotify = ["ureq"]
mattermost = ["ureq"]
mcp = ["dep:rmcp", "dep:tokio", "dep:shlex", "dep:reqwest"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
similar = "2"
regex = "1"
is-terminal = "0.4"
wait-timeout = "0.2"
hostname = "0.4"
libc = "0.2"
tar = "0.4"
flate2 = "1"
tiny_http = "0.12"
age = { version = "0.11", features = ["ssh"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
zeroize = { version = "1", features = ["derive"] }
rpassword = "5"
statrs = "0.18"
watermill = "0.1"
hdrhistogram = "7"
ureq = { version = "2", features = ["json"], optional = true }
lettre = { version = "0.11", optional = true }
rmcp = { version = "1.2", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest-native-tls"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process"], optional = true }
shlex = { version = "1", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["native-tls"], optional = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
